// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
f<<<T>(x)

=====================================output=====================================
f << (<T>x);

================================================================================
`;

exports[`2.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
f<<T>(v: T) => void>();

=====================================output=====================================
f<<T>(v: T) => void>();

================================================================================
`;

exports[`3.ts [babel-ts] format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(class extends f<<T>(v: T) => void> {});

=====================================output=====================================
(class extends f<<T>(v: T) => void> {});

================================================================================
`;

exports[`3.ts [typescript] format 1`] = `
"',' expected. (1:17)
> 1 | (class extends f<<T>(v: T) => void> {});
    |                 ^
  2 |"
`;

exports[`4.ts [babel-ts] format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(@f<<T>(v: T) => void>() class {});

=====================================output=====================================
(
  @f<<T>(v: T) => void>()
  class {}
);

================================================================================
`;

exports[`4.ts [typescript] format 1`] = `
"Expression expected. (1:2)
> 1 | (@f<<T>(v: T) => void>() class {});
    |  ^
  2 |"
`;

exports[`5.tsx [babel-ts] format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<Component<<T>(v: T) => void> />

=====================================output=====================================
<Component<<T>(v: T) => void> />;

================================================================================
`;

exports[`5.tsx [typescript] format 1`] = `
"Identifier expected. (1:11)
> 1 | <Component<<T>(v: T) => void> />
    |           ^
  2 |"
`;

exports[`6.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
new f<<T>(v: T) => void>();

=====================================output=====================================
new f<<T>(v: T) => void>();

================================================================================
`;
